--- a/views/ticket/ticket_form.pug
+++ b/views/ticket/ticket_form.pug
@@ -4,18 +4,14 @@ html(lang='en')
   +header(title)
   body
     header
-      link(rel='stylesheet', type='text/css', href='/stylesheets/prism.css')
-      script(src='/javascripts/prism.js')
+
       script(src='https://cloud.tinymce.com/5/tinymce.min.js?apiKey=ld4nt2kua9tevpu1bdsjmargql8oksngzmeps4cqup50heof')
       script.
-        tinymce.init({
-          selector: 'textarea',
-          plugins: 'autolink codesample formatpainter linkchecker lists checklist media mediaembed pageembed permanentpen powerpaste tinycomments tinydrive tinymcespellchecker',
-          toolbar: 'addcomment showcomments checklist codesample formatpainter insertfile pageembed permanentpen',
-          toolbar_drawer: 'sliding',
-          tinycomments_mode: 'embedded',
-          tinycomments_author: 'Author name'
-        });
+        ClassicEditor
+          .create( document.querySelector( '#editor' ) )
+          .catch( error => {
+              console.error( error );
+          } );
       include ../common/navbar.pug
       +navbar(user)
       .container
@@ -46,7 +42,7 @@ html(lang='en')
                   option#topic.form-control(value=topic) #{topic}
               div.form-group
                 label(for='description') Description:
-                textarea#description.form-control(name='description',type='text', placeholder='max 4000 chars',maxlength="4000", wrap="soft", row="10")
+                textarea#editor.form-control(name='content',type='text', placeholder='max 4000 chars',maxlength="4000", wrap="soft", row="10")
                 
               button.btn.btn-primary(type='submit') Submit
 
