added ticket_form/basics.pug and figure the corresponding routes

--- a/views/common/navbar.pug
+++ b/views/common/navbar.pug
@@ -9,7 +9,7 @@ mixin navbar(user)
           li.nav-item
             a#btn_tickets.nav-link(href="/tickets") Tickets
           li.nav-item
-            a#btn_ticket-form.nav-link(href="/ticket/form") Ask questions
+            a#btn_ticket-form.nav-link(href="/ticket_form/basics") Ask questions
       .navbar-right
         if user
           if user.is_admin
