--- a/views/ticket/ticket_form/solutions.pug
+++ b/views/ticket/ticket_form/solutions.pug
@@ -21,7 +21,7 @@ html(lang='en')
             h2 Here are the questions that previous users have asked:
 
             // register form
-            p something here
+            p #{solution}
             
             
             a#btn_ticket-form.nav-link(href="/ticket_form/basics") Next: details
