Add integrate function for smart solution
still need to finish the last step for details

--- a/views/ticket/ticket_form/solutions.pug
+++ b/views/ticket/ticket_form/solutions.pug
@@ -24,7 +24,7 @@ html(lang='en')
             p #{solution}
             
             
-            a#btn_ticket-form.nav-link(href="/ticket_form/basics") Next: details
+            a#btn_ticket-form.nav-link(href="/ticket_form/details") Next: details
             a#btn_ticket-form.nav-link(href="/ticket_form/basics") previous: basics
 
     include ../../common/footer.pug
