--- a/views/common/navbar.pug
+++ b/views/common/navbar.pug
@@ -10,6 +10,8 @@ mixin navbar(user)
             a#btn_tickets.nav-link(href="/tickets") Tickets
           li.nav-item
             a#btn_ticket-form.nav-link(href="/ticket/form") Ask questions
+          li.nav-item
+            a#btn_ticket-form.nav-link(href="/chat") Chat
       .navbar-right
         if user
           if user.is_admin
