--- a/views/common/header.pug
+++ b/views/common/header.pug
@@ -4,11 +4,19 @@ mixin header(title)
         title=title
         //[if lt IE 9]><script src="http://html5shim.googlecode.com/svn/trunks/html5.js"></script><![endif]
         //<base href="/">
+        
         meta(name='viewport', content='width=device-width,initial-scale=1,maximum-scale=1')
         meta(name='description',content='')
         link(rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous")
+        //- // testing
+        //- link(href='css/bootstrap.css' rel='stylesheet' type='text/css')
+        //- script(src='js/jquery-1.7.1.min.js')
+        //- script(src='js/bootstrap.js')
+        //- script(src='js/bootstrap-transition.js')
 
-        
+
+
+                
 
 
 
