--- a/views/common/navbar.pug
+++ b/views/common/navbar.pug
@@ -1,26 +1,34 @@
+
 mixin navbar(user)
-    nav.navbar.navbar-expand.navbar-light.bg-light
-      a(href="/", aria-label="Accenture Homepage").navbar-brand.mr-0.mr-md2
-        img(src="/images/accenture.png", width="36", height="36")
-      .collapse.navbar-collapse
-        ul.navbar-nav.mr-auto
-          li.nav-item
-            a.nav-link(href="/") Home
-          li.nav-item
-            a.nav-link(href="/tickets") Tickets
-          li.nav-item
-            a.nav-link(href="/ticket/form") Ask questions
-      .navbar-right
-        if user
-          ul.navbar-nav.mr-auto
-            span.navbar-text Hello #{user.firstName}!
-            li.nav-item
-              a.nav-link(href="/users/logout") Logout
-        else
-          .navbar-right
-            ul.navbar-nav.mr-auto
-              li.nav-item
-                a.nav-link(href="/users/signup") Sign up
-              li.nav-item
-                a.nav-link(href="/users/login") Login
-          
+		nav.navbar.navbar-expand.navbar-light.bg-light
+			a(href="/", aria-label="Accenture Homepage").navbar-brand.mr-0.mr-md2
+				img(src="/images/accenture.png", width="36", height="36")
+			
+			
+			.collapse.navbar-collapse
+				ul.navbar-nav.mr-auto
+					li.nav-item
+						a.nav-link(href="/" data-toggle="tooltip" data-placement="bottom" title="Home")   
+							img(src='../images/home.svg', width="30", heigh="30")
+							
+					li.nav-item
+						a.nav-link(href="/tickets" data-toggle="tooltip" data-placement="bottom" title="Tickets")   
+							img(src='../images/tickets.svg', width="30", heigh="30")
+
+					li.nav-item
+						a.nav-link(href="/ticket/form" data-toggle="tooltip" data-placement="bottom" title="Ask questions" )   
+							img(src='../images/question.svg', width="30", heigh="30")
+			.navbar-right
+				if user
+					ul.navbar-nav.mr-auto
+						span.navbar-text Hello #{user.firstName}!
+						li.nav-item
+							a.nav-link(href="/users/logout") Logout
+				else
+					.navbar-right
+						ul.navbar-nav.mr-auto
+							li.nav-item
+								a.nav-link(href="/users/signup") Sign up
+							li.nav-item
+								a.nav-link(href="/users/login") Login
+					
