--- a/views/users/login.pug
+++ b/views/users/login.pug
@@ -19,7 +19,7 @@ html(lang='en')
 										input(placeholder='Enter your email',required=true, name='email',type='email',value='').form-control
 										label.small.mb-1.mt-3 Password:
 										input(placeholder='Enter your password',required=true, name='password', type='password',value='').form-control
-										button.mt-3.btn.btn-primary(type='submit') Log in
+										button.mt-3.btn.btn-dark(type='submit') Log in
 										p.mt-2.mb-0
 											| Forgot your password? #[a(href="#") Reset here].
 										p.m-0
