--- a/views/welcome.pug
+++ b/views/welcome.pug
@@ -1,15 +1,8 @@
 - var count =1
 doctype html
 html(lang='en')
-	//- include common/header.pug
-	//- +header(title)
-	head
-	title Bootstrap Example
-	meta(charset='utf-8')
-	meta(name='viewport' content='width=device-width, initial-scale=1')
-	link(rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css')
-	script(src='https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js')
-	script(src='https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js')
+	include common/header.pug
+	+header(title)
 	style.
 		.carousel-inner > .item > img,
 		.carousel-inner > .item > a > img {
