--- a/views/common/header.pug
+++ b/views/common/header.pug
@@ -5,13 +5,13 @@ mixin header(title)
         //[if lt IE 9]><script src="http://html5shim.googlecode.com/svn/trunks/html5.js"></script><![endif]
         //<base href="/">
         
-        //- meta(name='viewport' content='width=device-width, initial-scale=1')
+        meta(name='viewport' content='width=device-width, initial-scale=1')
         link(rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css')
         script(src='https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js')
-        //- script(src='https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js')
+        script(src='https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js')
 
         
-        meta(name='viewport', content='width=device-width,initial-scale=1,maximum-scale=1')
+        //- meta(name='viewport', content='width=device-width,initial-scale=1,maximum-scale=1')
         meta(name='description',content='')
         link(rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous")
 
