--- a/views/welcome.pug
+++ b/views/welcome.pug
@@ -15,43 +15,8 @@ html(lang='en')
 			}
 		.container
 			br
-			#myCarousel.carousel.slide(data-ride='carousel')
-				// Indicators
-				ol.carousel-indicators
-					li.active(data-target='#myCarousel' data-slide-to='0' class="active")
-					li(data-target='#myCarousel' data-slide-to='1')
-					li(data-target='#myCarousel' data-slide-to='2')
-					li(data-target='#myCarousel' data-slide-to='3')
-				// Wrapper for slides
-				.carousel-inner(role='listbox')
-					.item.active
-						img(src='images/slide1.jpg' alt='Chania' width='460' height='345')
-						.carousel-caption
-							h3 Chania
-							p The atmosphere in Chania has a touch of Florence and Venice.
-					.item
-						img(src='images/slide2.jpg' alt='Chania' width='460' height='345')
-						.carousel-caption
-							h3 Chania
-							p The atmosphere in Chania has a touch of Florence and Venice.
-					.item
-						img(src='images/slide3.jpg' alt='Flower' width='460' height='345')
-						.carousel-caption
-							h3 Flowers
-							p Beautiful flowers in Kolymbari, Crete.
-					.item
-						img(src='images/slide4.jpg' alt='Flower' width='460' height='345')
-						.carousel-caption
-							h3 Flowers
-							p Beautiful flowers in Kolymbari, Crete.
-				// Left and right controls
-				a.left.carousel-control(href='#myCarousel' role='button' data-slide='prev')
-					span.glyphicon.glyphicon-chevron-left(aria-hidden='true')
-					span.sr-only Previous
-				a.right.carousel-control(href='#myCarousel' role='button' data-slide='next')
-					span.glyphicon.glyphicon-chevron-right(aria-hidden='true')
-					span.sr-only Next
-	
+			include common/carousel.pug
+			+carousel(title)
 		//- .container-fluid(style={display:"flex", alignitems:"center", justifycontent:"center"})
 		//- 	#carouselExampleControls.carousel.slide(data-ride='carousel')
 		//- 	.carousel-inner
