real time chat partly done without the user login

--- a/views/chat/chat.pug
+++ b/views/chat/chat.pug
@@ -34,6 +34,10 @@ script.
             e.preventDefault(); // prevent the page from reloading
             socket.emit('send message', $message.val());
             $message.val(''); // clean up the message value
-        })
+        });
+
+        socket.on('new message', function(data) {
+            $chat.append('<div class="well">' + data.msg + '</div>');
+        });
     });
   
