--- a/views/ticket/ticket_form.pug
+++ b/views/ticket/ticket_form.pug
@@ -41,8 +41,8 @@ html(lang='en')
                 each topic in topics
                   option#topic.form-control(value=topic) #{topic}
               div.form-group
-                label(for='description') Description:
-                textarea#editor.form-control(name='content',type='text', placeholder='max 4000 chars',maxlength="4000", wrap="soft", row="10")
+                label(for='content') Description:
+                textarea#content.form-control(name='content',type='text', placeholder='max 4000 chars',maxlength="4000", wrap="soft", row="10")
                 
               button.btn.btn-primary(type='submit') Submit
 
