added chat in welcome page, closing fn does not work

--- a/views/users/login.pug
+++ b/views/users/login.pug
@@ -23,7 +23,7 @@ html(lang='en')
 										p.mt-2.mb-0
 											| Forgot your password? #[a(href="#") Reset here].
 										p.m-0
-											| Don't have an account? #[a(href="/signup") Sign up here].
+											| Don't have an account? #[a(href="/users/signup") Sign up here].
 		include ../common/footer.pug
 		+footer()
 		//- script(src="/javascripts/leads.js")
