--- a/views/chat/chat.pug
+++ b/views/chat/chat.pug
@@ -2,8 +2,8 @@ doctype html
 html(lang='en')
     head
         title  IO Chat
-        link(rel='stylesheet' href='https://maxcdn.bootstrapcdn.\
-        com/bootstrap/3.3.6/css/bootstrap.min.css')
+        //- link(rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css')
+        link(rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous")
         script(src='http://code.jquery.com/jquery-latest.min.js')
         script(src='/socket.io/socket.io.js')
     body
@@ -20,7 +20,7 @@ html(lang='en')
                     lable Enter message
                     textarea#message.form-control
                     br
-                    input.btn.btn-primary(type='submit' value='Send Message')
+                    input.btn.btn-info(type='submit' value='Send Message')
 
 script(src='/socket.io/socket.io.js')
 script.
