fixed /user/signup problem

--- a/views/users/signup.pug
+++ b/views/users/signup.pug
@@ -37,7 +37,7 @@ html(lang='en')
                         p#err_password.small.text-danger #{errors.password}
                       button.mt-3.btn.btn-primary(type='submit') Sign up
                       p.mt-2.mb-0 
-                        | Already have an account? #[a(href="/login") Log in here].
+                        | Already have an account? #[a(href="/users/login") Log in here].
           
     include ../common/footer.pug
     +footer()
