--- a/views/ticket/user_0.pug
+++ b/views/ticket/user_0.pug
@@ -30,7 +30,7 @@ html(lang='en')
               tr
               tbody
               if tickets != NULL
-                for ticket in tickets.tickets
+                for ticket in tickets
                   if !ticket.tag
                     tr(id=ticket.id)
                       td
@@ -40,13 +40,11 @@ html(lang='en')
                       td
                         span #{ticket.description}
                       td
-                        span #{message.content}
+                        span#desc!=ticket.messages[0].content
                       td
                         a(href="/my_tickets/" + user.userId + '/' + ticket.ticketId) Edit
                       td
                         button(onclick=`deleteticket('${ticket.id}')`).btn.btn-primary Delete
-                  
-
 
     include ../common/footer.pug
     +footer()
