--- a/views/common/header.pug
+++ b/views/common/header.pug
@@ -22,7 +22,7 @@ mixin header(title)
                 autosave_interval: "20s",
 
                 images_upload_url: '/upload',
-                images_upload_base_path: 'http://escgroup1.herokuapp.com/'
+                images_upload_base_path: 'escgroup1.herokuapp.com/'
                 //- document_base_url: 'http://escgroup1.herokuapp.com/'
             });
 
