--- a/views/chat/room.pug
+++ b/views/chat/room.pug
@@ -4,7 +4,7 @@ doctype html
   It doesn't do much, except showing the create button for the chat.
 head
   title Accenture Private Chat | make your life efficient
-  link(type='text/css' rel='stylesheet' href='stylesheets/style.css')
+  link(type='text/css' rel='stylesheet' href='stylesheets/stylesheet.css')
   link(href='http://fonts.googleapis.com/css?family=Open+Sans Condensed:300italic,300,700' rel='stylesheet' type='text/css')
   //- include ../common/header.pug
   //- +header("Creat a chat room!")
