--- a/views/common/navbar.pug
+++ b/views/common/navbar.pug
@@ -1,17 +1,23 @@
 mixin navbar(user)
     nav.navbar.navbar-expand.navbar-light.bg-light
+      
       a(href="/", aria-label="Accenture Homepage").navbar-brand.mr-0.mr-md2
         img(src="/images/accenture.png", width="36", height="36")
       .collapse.navbar-collapse
         ul.navbar-nav.mr-auto
           li.nav-item
-            a#btn_home.nav-link(href="/") Home
+            a#btn_home.nav-link(href="/" data-toggle="tooltip" data-placement="bottom" title="Home Page") 
+              img(src='../images/home.svg', width="30", height="30")
           li.nav-item
-            a#btn_tickets.nav-link(href="/tickets") Tickets
+            a#btn_tickets.nav-link(href="/tickets" data-toggle="tooltip" data-placement="bottom" title="Your Tickets") 
+              img(src='../images/collections.svg', width="30", height="30")
           li.nav-item
-            a#btn_ticket-form.nav-link(href="/ticket_form/basics") Ask questions
+            a#btn_ticket-form.nav-link(href="/ticket_form/basics" data-toggle="tooltip" data-placement="bottom" title="Questions") 
+              img(src='../images/assignment.svg', width="30", height="30")
           li.nav-item
-            a#btn_chat.nav-link(href='/room') Chat
+            a#btn_chat.nav-link(href='/room' data-toggle="tooltip" data-placement="bottom" title="Chat with Admin now!") 
+              img(src='../images/questionanswer.svg', width="30", height="30")
+      
       .navbar-right
         if user
           if user.is_admin
@@ -32,3 +38,5 @@ mixin navbar(user)
               li.nav-item
                 a#btn_login.nav-link(href="/users/login") Login
           
+
+
