--- a/views/ticket/user_1.pug
+++ b/views/ticket/user_1.pug
@@ -31,20 +31,19 @@ html(lang='en')
               tbody
               if tickets != NULL
                 for ticket in tickets
-                  if !ticket.tag
-                    tr(id=ticket.id)
-                      td
-                        span #{count++}
-                      td
-                        span #{ticket.topic}  
-                      td
-                        span #{ticket.description}
-                      td
-                        span #{ticket.messages[0].content}
-                      td
-                        a(href="/my_tickets/" + user.userId + '/' + ticket.ticketId) Edit
-                      td
-                        button(onclick=`deleteticket('${ticket.id}')`).btn.btn-primary Delete
+                  tr(id=ticket.id)
+                    td
+                      span #{count++}
+                    td
+                      span #{ticket.topic}  
+                    td
+                      span #{ticket.description}
+                    td
+                      span#desc!=ticket.messages[0].content
+                    td
+                      a(href="/my_tickets/" + user.userId + '/' + ticket.ticketId) Edit
+                    td
+                      button(onclick=`deleteticket('${ticket.id}')`).btn.btn-primary Delete
                   
 
 
