--- a/views/welcome.pug
+++ b/views/welcome.pug
@@ -73,32 +73,32 @@ html(lang='en')
             span.carousel-control-next-icon(aria-hidden='true')
             span.sr-only Next
     
-    .container-fluid
-        link#bootstrap-css(href='//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css' rel='stylesheet')
-        link(href='/public/stylesheets/chatstyle.css')
-        script(src='//code.jquery.com/jquery-1.11.1.min.js')
-        script(src='/public/javascripts/staticchat.js')
-        script(src='//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js')
+    //- .container-fluid
+    //-     link#bootstrap-css(href='//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css' rel='stylesheet')
+    //-     link(href='/public/stylesheets/chatstyle.css')
+    //-     script(src='//code.jquery.com/jquery-1.11.1.min.js')
+    //-     script(src='/public/javascripts/staticchat.js')
+    //-     script(src='//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js')
         
         
-        // ---- Include the above in your HEAD tag --------
-        .chat_window
-        .top_menu
-            .buttons
-            .button.close
-            .button.minimize
-            .button.maximize
-            .title Chat
-        ul.messages
-        .bottom_wrapper.clearfix
-            .message_input_wrapper
-            input.message_input(placeholder='Type your message here...')
-            .send_message
-            .icon
-            .text Send
-        .message_template
-        li.message
-            .avatar
-            .text_wrapper
-            .text
+    //-     // ---- Include the above in your HEAD tag --------
+    //-     .chat_window
+    //-     .top_menu
+    //-         .buttons
+    //-         .button.close
+    //-         .button.minimize
+    //-         .button.maximize
+    //-         .title Chat
+    //-     ul.messages
+    //-     .bottom_wrapper.clearfix
+    //-         .message_input_wrapper
+    //-         input.message_input(placeholder='Type your message here...')
+    //-         .send_message
+    //-         .icon
+    //-         .text Send
+    //-     .message_template
+    //-     li.message
+    //-         .avatar
+    //-         .text_wrapper
+    //-         .text
 
