--- a/views/ticket/ticket_form/solutions.pug
+++ b/views/ticket/ticket_form/solutions.pug
@@ -21,7 +21,8 @@ html(lang='en')
             h2 Here are the questions that previous users have asked:
 
             // register form
-            p #{solution.TITLE}
+            a(href="/solutions/" + ) #{solution.first.title}
+            
             
             
             a#btn_ticket-form.nav-link(href="/ticket_form/details") Next: details
