--- a/views/ticket/ticket_form/details.pug
+++ b/views/ticket/ticket_form/details.pug
@@ -35,9 +35,9 @@ html(lang='en')
               div.form-group
                 label(for='content') Description:
                 textarea#content.form-control(name='content')
-                  <p> some sample text </p>
+                 |some sample text
                 
-              button.btn.btn-primary(type='submit') Submit
+              button.btn.btn-outline-dark(type='submit') Submit
 
 
 
