real time chat opens in new window

--- a/views/common/navbar.pug
+++ b/views/common/navbar.pug
@@ -15,7 +15,7 @@ mixin navbar(user)
             a#btn_ticket-form.nav-link(href="/ticket_form/basics" data-toggle="tooltip" data-placement="bottom" title="Questions") 
               img(src='../images/assignment.svg', width="30", height="30")
           li.nav-item
-            a#btn_chat.nav-link(href='/room' data-toggle="tooltip" data-placement="bottom" title="Chat with Admin now!") 
+            a#btn_chat.nav-link(href='/room' target="_blank" ata-toggle="tooltip" data-placement="bottom" title="Chat with Admin now!") 
               img(src='../images/questionanswer.svg', width="30", height="30")
       
       .navbar-right
