--- a/views/welcome.pug
+++ b/views/welcome.pug
@@ -43,22 +43,22 @@ html(lang='en')
             li(data-target='#carouselExampleCaptions', data-slide-to='3')
           .carousel-inner
             .carousel-item.active
-              img.d-block.w-100(src='images/slide1.jpg', alt='...')
+              img.d-block.w-100(src='images/slide6.jpg', alt='...')
               .carousel-caption.d-none.d-md-block
                 h3 First slide label
                 p Nulla vitae elit libero, a pharetra augue mollis interdum.
             .carousel-item
-              img.d-block.w-100(src='images/slide2.jpg', alt='...')
+              img.d-block.w-100(src='images/slide5.png', alt='...')
               .carousel-caption.d-none.d-md-block
                 h3 Second slide label
                 p Lorem ipsum dolor sit amet, consectetur adipiscing elit.
             .carousel-item
-              img.d-block.w-100(src='images/slide3.jpg', alt='...')
+              img.d-block.w-100(src='images/slide7.jpg', alt='...')
               .carousel-caption.d-none.d-md-block
                 h3 Third slide label
                 p Praesent commodo cursus magna, vel scelerisque nisl consectetur.
             .carousel-item
-              img.d-block.w-100(src='images/slide4.jpg', alt='...')
+              img.d-block.w-100(src='images/slide8.jpg', alt='...')
               .carousel-caption.d-none.d-md-block
                 h3 Third slide label
                 p Praesent commodo cursus magna, vel scelerisque nisl consectetur.
@@ -68,7 +68,8 @@ html(lang='en')
           a.carousel-control-next(href='#carouselExampleCaptions', role='button', data-slide='next')
             span.carousel-control-next-icon(aria-hidden='true')
             span.sr-only Next
-    
+    include common/footer.pug
+    +footer()
     
 
     //- .container-fluid
