--- a/views/chat/chat.pug
+++ b/views/chat/chat.pug
@@ -73,7 +73,7 @@ section.section
   form#chatform
     textarea#message(placeholder='Write something..')
     input#submit(type='submit' value='SEND')
-footer
+//- footer
 script(src='http://cdnjs.cloudflare.com/ajax/libs/jquery/1.10.2/jquery.min.js')
 script(src='../javascripts/moment.min.js')
 script(src='/socket.io/socket.io.js')
