--- a/views/chat/chat.pug
+++ b/views/chat/chat.pug
@@ -69,10 +69,10 @@ section.section
   .chatscreen
     ul.chats
       // The chat messages will go here
-
-  form#chatform
-    textarea#message(placeholder='Write something..')
-    input#submit(type='submit' value='SEND')
+  footer
+    form#chatform
+      textarea#message(placeholder='Write something..')
+      input#submit(type='submit' value='SEND')
 //- footer
 script(src='http://cdnjs.cloudflare.com/ajax/libs/jquery/1.10.2/jquery.min.js')
 script(src='../javascripts/moment.min.js')
