--- a/views/common/navbar.pug
+++ b/views/common/navbar.pug
@@ -9,19 +9,19 @@ mixin navbar(user)
 
           li.nav-item
             a#btn_home.nav-link(href="/" data-toggle="tooltip" data-placement="bottom" title="Home Page") 
-              img(src='../images/homewhite.png', width="30", height="30" style="padding: 0 0 0 0")
+              img(src='http://' + window.location.host + '/images/homewhite.png', width="30", height="30" style="padding: 0 0 0 0")
           li.nav-item
             a#btn_tickets.nav-link(href="/tickets" data-toggle="tooltip" data-placement="bottom" title="Your Tickets") 
-              img(src='../images/bookwhite.png', width="30", height="30")
+              img(src='http://' + window.location.host + '/images/bookwhite.png', width="30", height="30")
           li.nav-item
             a#btn_ticket-form.nav-link(href="/ticket_form/basics" data-toggle="tooltip" data-placement="bottom" title="Questions") 
-              img(src='../images/helpwhite.png', width="30", height="30")
+              img(src='http://' + window.location.host + '/images/helpwhite.png', width="30", height="30")
           li.nav-item
             a#btn_chat.nav-link(href='/room' target="_blank" ata-toggle="tooltip" data-placement="bottom" title="Chat with Admin now!") 
-              img(src='../images/chatwhite.png', width="30", height="30")
+              img(src='http://' + window.location.host + '/images/chatwhite.png', width="30", height="30")
           li.nav-item
             a#btn_consultant.nav-link(href='/consultant' data-toggle="tooltip" data-placement="bottom" title="Meet The Consultants") 
-              img(src='../images/consultantwhite.png', width="30", height="30")
+              img(src='http://' + window.location.host + '/images/consultantwhite.png', width="30", height="30")
       
       .navbar-right
         if user
@@ -42,6 +42,3 @@ mixin navbar(user)
                 a#btn_signup.nav-link(href="/users/signup") Sign up
               li.nav-item
                 a#btn_login.nav-link(href="/users/login") Login
-          
-
-
